--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -49,6 +49,10 @@
       font-size: rem(14);
     }
 
+    &.active {
+      color: $red;
+    }
+
     .menu__item:last-child & {
       @include breakpoint(medium) {
         padding-right: 0;
