--- a/src/scss/components/_slide.scss
+++ b/src/scss/components/_slide.scss
@@ -1,17 +1,29 @@
 .slide {
   @include margin-centered;
-  height: 250px;
+  height: 400px;
   max-width: 900px;
   overflow: hidden;
-  border-radius: rem(10);
 
   @include breakpoint(medium) {
     height: 500px;
+    border-radius: rem(10);
   }
 
   &__item {
     position: relative;
-    cursor: pointer;
+    display: none;
+
+    &.active {
+      display: block;
+    }
+
+    &.animation-left {
+      animation: showSlideLeft .3s forwards;
+    }
+
+    &.animation-right {
+      animation: showSlideRight .3s forwards;
+    }
   }
 
   &__overlay {
@@ -23,7 +35,7 @@
     justify-content: center;
     gap: rem(15);
     width: 100%;
-    height: 250px;
+    height: 400px;
     background: transparentize($black, .2);
     transition: .3s;
     opacity: 0;
@@ -75,5 +87,97 @@
     &:not(:last-child) {
       margin-bottom: rem(15);
     }
+  }
+}
+
+.slide-nav {
+  display: flex;
+  justify-content: center;
+
+  &__link {
+    display: block;
+    width: 15px;
+    height: 15px;
+    border: 1px solid $white;
+    border-radius: 50%;
+    text-indent: -9999px;
+
+    & + .slide-nav__link {
+      margin-left: rem(10);
+    }
+
+    &.active {
+      background: $red;
+      border: 1px solid $red;
+      transition: .3s;
+    }
+  }
+}
+
+.slide-arrows {
+  &__link {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    font-size: rem(48);
+    @include breakpoint(medium) {
+      font-size: rem(64);
+      top: 50%;
+      bottom: 50%;
+    }
+
+    &.left {
+      left: 20px;
+
+      @include breakpoint(medium) {
+        left: 50px;
+      }
+      
+      @include breakpoint(large) {
+        left: 90px;
+      }
+
+      @include breakpoint(x-large) {
+        left: 150px;
+      }
+    }
+  
+    &.right {
+      right: 20px;
+
+      @include breakpoint(medium) {
+        right: 50px;
+      }
+
+      @include breakpoint(large) {
+        right: 90px;
+      }
+
+      @include breakpoint(x-large) {
+        right: 150px;
+      }
+    }
+  }
+}
+
+@keyframes showSlideRight {
+  0% {
+    opacity: 0;
+    transform: translateX(500px);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes showSlideLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-500px);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
   }
 }
