--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -5,7 +5,7 @@
     display: grid;
     gap: rem(30);
 
-    @include breakpoint(medium) {
+    @include breakpoint(small) {
       grid-template-columns: repeat(2, 1fr);
     }
 
