--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,10 +1,13 @@
 .hero {
+  @include padding-width($gutter);
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
   min-height: 500px;
+  max-width: 100%;
   background: url('../../../img/main-bg.jpg') no-repeat center;
   background-size: cover;
 
@@ -12,18 +15,22 @@
     margin-bottom: rem(60);
     color: $white;
     font-family: $hero-font;
-    font-size: em(34);
+    font-size: rem(28);
     font-weight: 600;
     line-height: 1.2;
     text-align: center;
     text-transform: uppercase;
 
+    @include breakpoint(small) {
+      font-size: rem(36);
+    }
+
     @include breakpoint(medium) {
-      font-size: em(48);
+      font-size: rem(48);
     }
 
     @include breakpoint(large) {
-      font-size: em(64);
+      font-size: rem(64);
     }
   }
 }
