--- a/src/scss/sections/_services.scss
+++ b/src/scss/sections/_services.scss
@@ -5,7 +5,11 @@
     display: grid;
     gap: rem(30);
 
-    @include breakpoint(medium) {
+    @include breakpoint(small) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    @include breakpoint(large) {
       grid-template-columns: repeat(3, 1fr);
     }
   }
@@ -17,5 +21,32 @@
   &__item {
     @include margin-centered;
     max-width: 375px;
+
+    &:first-of-type {
+      @include breakpoint(small) {
+        grid-column: 1 / 3;
+      }
+      @include breakpoint(large) {
+        grid-column: 1;
+      }
+    }
+
+    &:nth-of-type(2) {
+      @include breakpoint(small) {
+        grid-column: 3 / 5;
+      }
+      @include breakpoint(large) {
+        grid-column: 2;
+      }
+    }
+
+    &:last-of-type {
+      @include breakpoint(small) {
+        grid-column: 2 / 4;
+      }
+      @include breakpoint(large) {
+        grid-column: 3;
+      }
+    }
   }
 }
