--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -208,7 +208,8 @@ img {
 // -----------------------------------------------------------
 // 5. Others
 // -----------------------------------------------------------
-.js-scroll {
+
+[data-anime="scroll"] {
   .js & {
     opacity: 0;
     transform: translateX(-50px);
@@ -218,6 +219,33 @@ img {
       opacity: 1;
       transform: none;
     }
+  }
+}
+
+[data-animation] {
+  .js & {
+    opacity: 0;
+
+    &.active {
+      opacity: 1;
+      transform: none;
+      transition: transform .8s, opacity .3s;
+    }
+  }
+}
+
+.js {
+  .top {
+    transform: translate3d(0, -30px, 0);
+  }
+  .bottom {
+    transform: translate3d(0, 30px, 0);
+  }
+  .right {
+    transform: translate3d(-100px, 0, 0);
+  }
+  .left {
+    transform: translate3d(100px, 0, 0);
   }
 }
 
